--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
+    "axios": "^1.12.2",
     "yaml": "^2.3.4",
     "zod": "^3.22.4"
   },
